# cheetah-project

./: README  README.mkd
code/sine_based/: .README.mkd.swp  README.mkd
code/sine_based/CheetahGait/: simulation_supervisor.sh
code/sine_based/CheetahGait/controllers/basic/: BasicController.cpp  BasicController.h  CMakeLists.txt  Makefile  basic-1.0.0  basic.cpp
code/sine_based/CheetahGait/controllers/basic/Modules/: FindWebots.cmake
code/sine_based/CheetahGait/controllers/systematic/: .SystematicSearchController.h.swp  Makefile  SystematicSearchController (amphip-ampknee).cpp  SystematicSearchController (amphip-ampknee).h  SystematicSearchController (backup).cpp  SystematicSearchController (backup2).cpp  SystematicSearchController.cpp  SystematicSearchController.d  SystematicSearchController.h  basic-1.0.0  systematic  systematic.cpp  systematic.d
code/sine_based/CheetahGait/controllers/systematic/Modules/: FindWebots.cmake
code/sine_based/CheetahGait/plugins/physics/QuadAmarsi/: BodyResetter.cpp  BodyResetter.h  CheckGroundContact.cpp  CheckGroundContact.h  CheetahMessages.cpp  Makefile  MessageException.cpp  MotionRestrictor.cpp  MotionRestrictor.h  PhysicsPluginData.cpp  PhysicsPluginData.h  QuadAmarsi.cpp  QuadAmarsi.so.0.3.0  QuadAmarsi.so.0.3.1  Quat.cpp  Vector.cpp  (+12 more)
code/sine_based/CheetahGait/prefs/: global.pref
code/sine_based/CheetahGait/worlds/: .Amarsi-Quadrupedal.wbt.project  Amarsi-Quadrupedal-backup.wbt  Amarsi-Quadrupedal.wbt
results/fabian/CPG/: final_result_perturbation_smooth_recovery.txt  final_result_smooth_hip_amplitude_augmentation.txt  gait_analysis.R
results/fabian/feedback/: gait_analysis.R  result_hip_trajectory.txt
results/first_search/: trial1.txt  use_results.R
results/first_search/unused_graphs/: interpretation
results/gait_anal/best/: gait_analysis.R  gait_analysis_long.R  result_forces.txt  result_hip_trajectory.txt  result_knee_trajectory.txt  result_leg_trajectory.txt  result_leg_trajectory_rframe.txt  result_rob_trajectory.txt  result_stats.txt  result_time.txt
results/gait_anal/gait1/: gait_analysis.R  result_forces.txt  result_hip_trajectory.txt  result_knee_trajectory.txt  result_leg_trajectory.txt  result_leg_trajectory_rframe.txt  result_rob_trajectory.txt  result_stats.txt  result_time.txt
results/gait_anal/most_stable/: gait_analysis.R  result_forces.txt  result_hip_trajectory.txt  result_knee_trajectory.txt  result_leg_trajectory.txt  result_leg_trajectory_rframe.txt  result_rob_trajectory.txt  result_stats.txt  result_time.txt
results/gait_anal/podium/: gait_analysis.R  result_forces.txt  result_hip_trajectory.txt  result_knee_trajectory.txt  result_leg_trajectory.txt  result_leg_trajectory_rframe.txt  result_rob_trajectory.txt  result_time.txt
results/gait_anal/podium-100/: gait_analysis.R  result_forces.txt  result_hip_trajectory.txt  result_knee_trajectory.txt  result_leg_trajectory.txt  result_leg_trajectory_rframe.txt  result_rob_trajectory.txt  result_stats.txt  result_time.txt
results/gait_anal/poor/: gait_analysis.R  result_forces.txt  result_hip_trajectory.txt  result_knee_trajectory.txt  result_leg_trajectory.txt  result_leg_trajectory_rframe.txt  result_rob_trajectory.txt  result_stats.txt  result_time.txt
results/hip_knee_search/: .RData  .Rhistory  INFO  cat_data.sh  plot.R  poor_gait.txt  stability.R
results/hip_knee_search/raw/: amplitudeHip-0.20.txt  amplitudeHip-0.25.txt  amplitudeHip-0.30.txt  amplitudeHip-0.35.txt  amplitudeHip-0.45.txt  amplitudeHip-0.50.txt  amplitudeHip-0.55.txt  amplitudeHip-0.60.txt
results/kneelag_amp_search/: INFO  plot.R
results/kneelag_amp_search/raw/: kneePhaseLag-0.4.txt  kneePhaseLag-0.5.txt  kneePhaseLag-0.6.txt  kneePhaseLag-0.7.txt  kneePhaseLag-0.8.txt  kneePhaseLag-0.9.txt  kneePhaseLag-1.0.txt  kneePhaseLag-1.1.txt  kneePhaseLag-1.2.txt
